# dagster-london-walks

./: Dockerfile  README.md  pyproject.toml  setup.cfg  setup.py
dagster_london_walks/: assets.py  definitions.py
dagster_london_walks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data/: 2025-08-18_london-walks.csv  capital-ring.csv  green-chain-walk.csv  green-link-walk.csv  london-loop.csv
my_dagster_project/: assets.py  definitions.py
my_dagster_project.egg-info/: PKG-INFO
