[project]
name = "dagster_london_walks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-aws>=0.26.21",
    "dagster-cloud",
    "dagster-pandas>=0.26.21",
    "dagster-webserver>=1.10.21",
    "datetime>=5.5",
    "pandas>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_london_walks.definitions"
code_location_name = "dagster_london_walks"

[tool.setuptools.packages.find]
exclude=["dagster_london_walks_tests"]
